objects/SProgress__c.object
<CustomObject>
    <fields>
        <fullName>CPP__c</fullName>
        <label>CPP</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C__c</fullName>
        <label>C</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Java__c</fullName>
        <label>Java</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SProgress</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SName</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SMDetails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>